[wheel]
universal = 1

[metadata]
name = zbx
description-file = README.rst
author = Xavier Barbosa
author-email = clint.northwood@gmail.com
summary = Zabbix utilitary tools
home-page = https://github.com/johnnoone/zbx
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    zbx

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[nosetests]
detailed-errors=1
with-doctest = 1
nocapture = 1

; [flake8]
; exclude, filename, select, ignore, max-line-length, hang-closing, count, format, quiet, show-pep8, show-source, statistics, verbose, builtins, max-complexity.